--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "contentlayer": "^0.3.4",
+    "next-contentlayer": "^0.3.4",
+    "next-mdx-remote": "^5.0.0",
     "postcss": "^8",
+    "rehype-autolink-headings": "6.1.1",
+    "rehype-pretty-code": "0.10.0",
+    "rehype-slug": "5.1.0",
+    "remark-gfm": "3.0.1",
+    "shiki": "^1.26.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
