--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "lucide-react": "^0.469.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
