--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "contentlayer": "^0.3.4",
+    "eslint": "^9.18.0",
     "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8",
