--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-highlight": "6",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
@@ -26,6 +27,8 @@
     "autoprefixer": "^10.0.1",
     "contentlayer": "^0.3.4",
     "eslint": "^9.18.0",
+    "highlight.js": "^11.11.1",
+    "lowlight": "^3.3.0",
     "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8",
